--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Adopta.Agency
 title: Making public datasets more accessible
-permalink: /work/adopta-agency/
+permalink: /work/experience/adopta-agency/
+redirect_from:
+  - /work/adopta-agency/
 image: /img/projects/adopta-agency/api-launcher.svg
 image_description: A person using a catapult to launch a boulder enscribed with the acronym API.
 feature_image:
