--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Agile Delivery Services Marketplace
 title: Streamlining how agencies procure software
-permalink: /work/agile-delivery-services-marketplace/
+permalink: /work/experience/agile-delivery-services-marketplace/
+redirect_from:
+  - /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.svg
 image_description: A person selecting a digitized-looking package for purchase from a store shelf.
 feature_image:
