--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -2,8 +2,10 @@
 layout: default
 title_tag: Carrot
 title: Building a communication application for remote teams
-permalink: /work/carrot/
-redirect_from: /work/opencompany/
+permalink: /work/experience/carrot/
+redirect_from:
+  - /work/opencompany/
+  - /work/carrot/
 image: /img/projects/carrot/carrot.svg
 image_description: Multiple people together reading a page out of a huge newsletter.
 feature_image:
