--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Digital Transformation Framework
 title: Digitally transforming government
-permalink: /work/digital-transformation-framework/
+permalink: /work/experience/digital-transformation-framework/
+redirect_from:
+  - /work/digital-transformation-framework/
 image: /img/projects/digital_transformation_framework/digital-government-transformation.svg
 image_description: Two people using old computers sitting across from someone using a modern computer.
 feature_image:
