--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Department of Labor
 title: De-risking a legacy system modernization
-permalink: /work/dol-legacy-system-modernization/
+permalink: /work/experience/dol-legacy-system-modernization/
+redirect_from:
+  - /work/dol-legacy-system-modernization/
 image: /img/projects/dol_legacy_system_modernization/legacy-system-modernization.svg
 image_description: Someone operating a conveyor belt that's transforming old computers into modern tablets.
 feature_image:
