--- a/_projects/everify_modernization.html
+++ b/_projects/everify_modernization.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: U.S. Citizenship and Immigration Services
 title: Modernizing employment eligibility verification
-permalink: /work/uscis-everify-modernization/
+permalink: /work/experience/uscis-everify-modernization/
+redirect_from:
+  - /work/uscis-everify-modernization/
 image: /img/projects/uscis_everify_modernization/employment-eligibility-verification.svg
 image_description: A person using a punchcard to enter work.
 feature_image:
