--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Social Security Administration
 title: Accelerating agile adoption
-permalink: /work/ssa-agile-microsprints/
+permalink: /work/experience/ssa-agile-microsprints/
+redirect_from:
+  - /work/ssa-agile-microsprints/
 image: /img/projects/ssa_agile_microsprints/agile-board.svg
 image_description: Two people interacting with cards on an agile board.
 feature_image:
