--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: TalkTo
 title: Developing a consumer-to-business messaging service
-permalink: /work/talkto/
+permalink: /work/experience/talkto/
+redirect_from:
+  - /work/talkto/
 image: /img/projects/talkto/talkto.svg
 image_description: A person texting with a shopekeeper.
 feature_image:
