--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Managing APIs successfully at scale
-permalink: /work/va-api-governance-research/
+permalink: /work/experience/va-api-governance-research/
+redirect_from:
+  - /work/va-api-governance-research/
 image: /img/projects/va_api_governance_research/api-governance.svg
 image_description: A forklift operator lifting API-labeled containers.
 feature_image:
