--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Identifying valuable datasets for turning into APIs
-permalink: /work/va-api-landscape-analysis/
+permalink: /work/experience/va-api-landscape-analysis/
+redirect_from:
+  - /work/va-api-landscape-analysis/
 image: /img/projects/va_api_landscape_analysis/api-machine.svg
 image_description: Two people operating a machine that turns data into APIs.
 feature_image:
