--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Creating a tool for governing APIs
-permalink: /work/va-api-scorecard-mvp/
+permalink: /work/experience/va-api-scorecard-mvp/
+redirect_from:
+  - /work/va-api-scorecard-mvp/
 image: /img/projects/va_api_scorecard_mvp/api-scorecard.svg
 image_description: People working around a scorecard for APIs.
 feature_image:
