--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Creating a knowledge platform for improving healthcare
-permalink: /work/va-diffusion-marketplace/
+permalink: /work/experience/va-diffusion-marketplace/
+redirect_from:
+  - /work/va-diffusion-marketplace/
 image: /img/projects/va_diffusion_marketplace/diffusion-marketplace.svg
 image_description: Doctors, administrators, and veteran patients interacting through digital panes.
 feature_image:
