--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Strategizing a better mobile user experience for vets
-permalink: /work/va-mobile-product-strategy/
+permalink: /work/experience/va-mobile-product-strategy/
+redirect_from:
+  - /work/va-mobile-product-strategy/
 image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.svg
 image_description: A veteran using a VA flagship mobile app.
 feature_image:
