--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Submit your application
-permalink: /services/ditap/apply/
+title: Submit Your Application
+permalink: /work/services/ditap/apply/
 ---
 
 {% include hero_banner.html
