--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@ title: Home
       <h1 class="hidden-xs-down">We make government <br> work in a digital world</h1>
 
       <p class="hidden-sm-up">
-        Skylight is a digital consultancy using design and technology
+        Skylight is a digital consultancy using design, technology, and procurement
         to help agencies deliver better public services.
       </p>
 
       <p class="hidden-xs-down">
-        Skylight is a digital consultancy using design and technology
-        <br> to help agencies deliver better public services.
+        Skylight is a digital consultancy using design, technology, and <br> procurement
+        to help agencies deliver better public services.
       </p>
 
-      <a class="btn btn-warning btn-lg text-dark" href="/hire-us/" role="button">
+      <a class="btn btn-warning btn-lg text-dark" href="/contact/" role="button">
         <span class="font-bold">Let's talk</span>
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
@@ -137,11 +137,11 @@ title: Home
 
       <div class="landing-content-ctas-col">
         <div class="landing-content-cta-wrapper">
-          <a href="/services/" role="button">Learn what we offer</a>
+          <a href="/work/services/" role="button">Learn what we offer</a>
         </div>
 
         <div class="landing-content-cta-wrapper">
-          <a href="/work/" role="button">View our work</a>
+          <a href="/work/experience/" role="button">View our work</a>
         </div>
       </div>
     </section>
