--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Team
-permalink: /team/
+permalink: /company/about/
 redirect_from: /about/
 ---
 
@@ -12,10 +12,6 @@ redirect_from: /about/
 
 <div class="about-us">
 
-  <img src="/img/about-skylight.png"
-    alt="Illustration of a laptop with various govtech and civictech stickers on the back of it."
-    class="about-skylight-img">
-
   <section class="page-block">
     <div class="page-block-header-2">
       <h2>Our story</h2>
@@ -25,7 +21,7 @@ redirect_from: /about/
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was launched in June of 2017. We're currently made up of 36 people and
+            Skylight was launched in June of 2017. We're currently made up of 38 people and
             one ferret. A lot of us originally worked for civic-oriented groups such as 18F,
             the U.S. Digital Service, and the Presidential Innovation Fellows.
             Now, as part of Skylight, we're working hard to cultivate an incredible
@@ -42,38 +38,19 @@ redirect_from: /about/
           </p>
 
           <p>
-            Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
-            but we're a distributed and remote-friendly team. A lot of our client work
-            originates from Washington DC.
+            Our official headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
+            but we're a distributed and remote-friendly team currently spread across 20 different states.
+            Sometimes the nature of our client work calls for closer proximity to their location.
+            So far, we've worked with clients located in places like Washington DC, Hartford (Connecticut),
+            Montgomery (Alabama), Baltimore (Maryland), and Ottawa (Canada).
           </p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <section id="hubzone" class="page-block">
-    <div class="page-block-header-2">
-      <h2>Certified HUBZone</h2>
-    </div>
-
-    <div class="about-info">
-      <div class="about-info-row">
-        <div class="about-info-col">
           <p>
-            We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program">
+            We're also certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program">
             Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
             means we're committed to revitalizing local communities through job creation.
             In turn, we're granted privileged access to federal government contract opportunities,
             including up to $4M per contract award.
-          </p>
-
-          <p>
-            To maintain our HUBZone status, 35% of our employees must be located in
-            <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps">
-            one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
-            number of people must be concentrated in our "principal office" location, which is in
-            Chapel Hill, North Carolina. The remaining percentage of people are free to live
-            in whatever HUBZone locale they prefer.
           </p>
         </div>
       </div>
@@ -136,10 +113,10 @@ redirect_from: /about/
           <p>
             If you have a question for us, or would just like to get in touch, drop us a message
             at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-            If you'd like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
-            If you're interested in joining our team, <a href="/join/">send us your information</a>.
+            If you'd like to inquire about hiring us for a job, <a href="/contact/">fill out this short form</a>.
+            If you're interested in joining our team, <a href="/careers/">check out our career opportunities</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
-            <a href="/alliances/">let's talk business</a>.
+            <a href="/contact/">let's talk business</a>.
           </p>
 
           <p>
@@ -156,7 +133,7 @@ redirect_from: /about/
           <p>
             Feel free to reach out directly to one of our leaders &mdash;
             <a href="mailto:chris@skylight.digital">Chris Cairns</a>
-            or <a href="mailto:josh@skylight.digital">Josh Dorothy</a>.
+            or <a href="mailto:shashank@skylight.digital">Shashank Khandelwal</a>.
           </p>
 
           <p>
