--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Contact
+title: Contact Us
 permalink: /contact/
 redirect_from:
   - /hire-us/
@@ -8,20 +8,20 @@ redirect_from:
 ---
 
 {% include hero_banner.html
-  hero_content = 'We’d love to work with you on turning your most bold idea or complex problem into a public success story.'
+  hero_content = "We'd love to work with you on turning your most bold idea or complex problem into a public success story."
   image = ""
   color = "yellow"
   text = "dark"
 %}
 
-<div class="hire-us text">
+<div class="contact-us text">
   <p>
     Please describe what you're looking
     to do, and we'll follow up in one business day. If you prefer, you can email
     us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
   </p>
 
-  <div class="hire-us-form">
+  <div class="contact-us-form">
     <form accept-charset="UTF-8" action="https://formkeep.com/f/4309c7290974" method="POST">
       <input type="hidden" name="utf8" value="✓">
 
