--- a/pages/culture.html
+++ b/pages/culture.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Our culture
-permalink: /culture/
+title: Our Culture
+permalink: /about/culture/
 ---
 
 {% include hero_banner.html
