--- a/pages/policies.html
+++ b/pages/policies.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Our Policies
-permalink: /policies/
+permalink: /company/policies/
 ---
 
 {% include page_header.html
@@ -23,12 +23,12 @@ permalink: /policies/
   <div class="policies-row">
     <div class="policy-list-col">
       <ul>
-        <li><a href="/policies/privacy/">Privacy policy</a></li>
-        <li><a href="/policies/intellectual-property/">Intellectual property policy</a></li>
-        <li><a href="/policies/linking/">Linking policy</a></li>
-        <li><a href="/policies/open-source/">Open source policy</a></li>
-        <li><a href="/policies/vulnerability-disclosure/">Vulnerability disclosure policy</a></li>
-        <li><a href="/policies/code-of-conduct/">Code of conduct policy</a></li>
+        <li><a href="/company/policies/privacy/">Privacy policy</a></li>
+        <li><a href="/company/policies/intellectual-property/">Intellectual property policy</a></li>
+        <li><a href="/company/policies/linking/">Linking policy</a></li>
+        <li><a href="/company/policies/open-source/">Open source policy</a></li>
+        <li><a href="/company/policies/vulnerability-disclosure/">Vulnerability disclosure policy</a></li>
+        <li><a href="/company/policies/code-of-conduct/">Code of conduct policy</a></li>
       </ul>
     </div>
   </div>
