--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: 18F Consulting
 title: Helping agencies achieve digital mastery
-permalink: /work/18f-consulting/
+permalink: /work/experience/18f-consulting/
+redirect_from:
+  - /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.png
 image_description: The logo of 18F Consulting.
 feature_image:
