--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Agile Acquisition Framework
 title: Making government procurements agile
-permalink: /work/agile-acquisition-framework/
+permalink: /work/experience/agile-acquisition-framework/
+redirect_from:
+  - /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework.svg
 image_description: A person jumping over a cliff.
 feature_image:
