--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Digital Acquisition Accelerator
 title: Developing more digital acquisition professionals
-permalink: /work/digital-acquisition-accelerator/
+permalink: /work/experience/digital-acquisition-accelerator/
+redirect_from:
+  - /work/digital-acquisition-accelerator/
 image: /img/projects/digital_acquisition_accelerator/speedometer.png
 image_description: A speedometer.
 feature_image:
