--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Transportation Security Administration
 title: Jumpstarting cloud adoption
-permalink: /work/tsa-cloud-adoption/
+permalink: /work/experience/tsa-cloud-adoption/
+redirect_from:
+  - /work/tsa-cloud-adoption/
 image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.svg
 image_description: An engineer using jumper cables on a cloud.
 feature_image:
