--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: U.S. Navy
 title: Better decisions through protosketching
-permalink: /work/us-navy-protosketching/
+permalink: /work/experience/us-navy-protosketching/
+redirect_from:
+  - /work/us-navy-protosketching/
 image: /img/projects/us_navy_protosketching/protosketching.svg
 image_description: Two people using brushes to draw a wireframe.
 feature_image:
