--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -2,7 +2,9 @@
 layout: default
 title_tag: Veterans Affairs
 title: Expanding the adoption of APIs
-permalink: /work/va-api-developer-outreach/
+permalink: /work/experience/va-api-developer-outreach/
+redirect_from:
+  - /work/va-api-developer-outreach/
 image: /img/projects/va_api_developer_outreach/api-developer-outreach.svg
 image_description: Someone using a megaphone to spread the word about APIs.
 feature_image:
