--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contracting
-permalink: /contracting/
+permalink: /work/contracting/
 ---
 
 {% include hero_banner.html
