--- a/pages/experience.html
+++ b/pages/experience.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Case Studies
-permalink: /case-studies/
+title: Our Experience
+permalink: /work/experience/
 redirect_from:
   - /work/
   - /work/energyos/
@@ -40,7 +40,7 @@ pagination:
   col_size = 3
 %}
 
-<div class="our-work">
+<div class="our-experience">
   <div class="projects">
     <div class="projects-row">
       {% for item in paginator.posts %}
