Add sorting order

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -11,6 +11,8 @@ redirect_from:
 pagination:
   enabled: true
   collection: projects
+  sort_field: 'order'
+  sort_reverse: false
 ---
 
 {% capture header_content %}
