Move sorting outside config within page

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,8 @@ permalink: /blog/
 pagination:
   enabled: true
   collection: blog_posts
+  sort_field: 'date'
+  sort_reverse: true
 ---
 
 {% include page_header.html
