--- a/pages/experience.html
+++ b/pages/experience.html
@@ -8,6 +8,11 @@ redirect_from:
   - /work/maalka/
   - /work/people-power/
   - /work/team-member/john-teeter/
+pagination:
+  enabled: true
+  collection: projects
+  sort_field: 'order'
+  sort_reverse: false
 ---
 
 {% capture header_content %}
