add content for toolkits, contracting pages and some other changes

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -129,7 +129,7 @@ source_code_url:
     </li>
 
     <li>
-      Grew into multiple new organizations within GSA's Technology Transformation Service,
+      Grew into multiple new organizations within GSA's Technology Transformation Services,
       including Office of Acquisitions, 18F Transformation, and 18F Learn
     </li>
   </ul>
