--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,9 +16,8 @@ redirect_from:
 
 <div class="contact-us text">
   <p>
-    Please describe what you're looking
-    to do, and we'll follow up in one business day. If you prefer, you can email
-    us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+    Please describe what you're looking to do, and we'll follow up in one business day.
+    If you prefer, you can emailus at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
   </p>
 
   <div class="contact-us-form">
