reworked IA...add some pages and initial content

--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -96,7 +96,7 @@ source_code_url:
     </li>
 
     <li>
-      A <a href="https://skylight.digital/blog/public-domain-procurement/">robust contractual clause</a>
+      A <a href="/thoughts/blog/public-domain-procurement/">robust contractual clause</a>
       that, by default, requires all vendors to agree to commit all data,
       source code, and documentation produced for the government to the public domain
     </li>
