--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
         to help agencies deliver better public services.
       </p>
 
-      <a class="btn btn-warning btn-lg text-dark" href="/contact/" role="button">
+      <a class="btn btn-warning btn-lg text-dark" href="/connect/contact/" role="button">
         <span class="font-bold">Let's talk</span>
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
