--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Contract With Us
-permalink: /work/contracting/
+title: Contracting
+permalink: /connect/contracting/
 ---
 
 {% include hero_banner.html
-  hero_content = 'Learn more about our capabilities, contract vehicles, and company data.'
+  hero_content = 'Learn more about why and how to contract with us.'
   color = 'blue'
 %}
 
@@ -21,13 +21,13 @@ permalink: /work/contracting/
   <li>Founders of <a href="https://18f.gsa.gov/">18F</a> and <a href="https://www.gsa.gov/about-us/organization/federal-acquisition-service/technology-transformation-services">Technology Transformation Services</a></li>
   <li>Former members of 18F, the <a href="https://www.usds.gov/">U.S. Digital Serivce</a>, the <a href="https://presidentialinnovationfellows.gov/">Presidential Innovation Fellows</a>, and <a href="https://www.codeforamerica.org/">Code for America</a></li>
   <li>Founding member of the <a href="https://digitalservicescoalition.org/#/">Digital Services Coalition</a></li>
-  <li>Pioneers of modern procurement, including <a href="/blog/thoughts-on-the-use-of-technical-challenges-in-government-procurements/">code/tech challenges</a>, <a href="/work/experience/agile-delivery-services-marketplace/">agile/digital service vendor pools</a>, <a href="/work/experience/agile-acquisition-framework/">agile/digital acquisition methods</a>, <a href="/blog/public-domain-procurement/">public-domain procurement</a>, and <a href="/blog/supplement-your-team-with-specific-digital-expertise-through-our-microconsulting-services/">microconsulting</a></li>
+  <li>Pioneers of modern procurement, including <a href="/thoughts/blog/thoughts-on-the-use-of-technical-challenges-in-government-procurements/">code/tech challenges</a>, <a href="/work/experience/agile-delivery-services-marketplace/">agile/digital service vendor pools</a>, <a href="/work/experience/agile-acquisition-framework/">agile/digital acquisition methods</a>, <a href="/thoughts/blog/public-domain-procurement/">public-domain procurement</a>, and <a href="/thoughts/blog/supplement-your-team-with-specific-digital-expertise-through-our-microconsulting-services/">microconsulting</a></li>
   <li>Providers of <a href="/work/services/ditap/">DITAP training</a> for federal acquisition officers to learn about modern procurement practices</li>
   <li>Pioneers of industry technical standards, such as IPv6</li>
   <li>Founders of successful technology startups, such as <a href="/work/experience/talkto/">TalkTo</a></li>
   <li>Former design and technical leaders of popular government-wide standards, products, and platforms, such as <a href="https://cloud.gov/">cloud.gov</a>, <a href="https://designsystem.digital.gov/">U.S. Web Design System</a>, and <a href="https://accessibility.18f.gov/">18F's Accessibility Guide</a></li>
   <li>Recognized industry experts in several different areas, such as APIs and design systems</li>
-  <li>Frequent contributors to industry press, such as FCW, FedScoop, and Federal News Network</li>
+  <li>Frequent contributors to <a href="/company/press/">industry press</a>, such as FCW, FedScoop, and Federal News Network</li>
   <li>Authors of popular books, such as "<a href="https://braydie.gitbooks.io/how-to-be-a-programmer/content/en/">How to be a Programmer"</a></li>
 </ul>
 
@@ -59,9 +59,9 @@ permalink: /work/contracting/
 
 <h2>Contracting pathways and vehicles</h2>
 <ul>
-  <li>SBA-certified HUBZone company &ndash; eligible for sole-source contracts</li>
   <li>GSA IT Schedule 70 (47QTCA18D00D0) &ndash; accessible to all federal, state, and local governments</li>
-  <li>U.S. Air Force SBIR Phase II (FA864919CA079)&ndash; accessible to any federal agency who can convert to a Phase III and issue sole-source contract awards</li>
+  <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &ndash; eligible for sole-source contracts</li>
+  <li>U.S. Air Force SBIR Phase II (FA864919CA079)&ndash; eligible for sole-source contracts and accessible to any federal agency</li>
   <li>California Agile Vendor Pool <i>sub</i></li>
   <li>DHS Services for Enabling Agile Delivery (SEAD) <i>sub</i></li>
   <li>CMS Enterprise Agile Transformation Services (EATS) <i>sub</i></li>
