--- a/pages/culture.html
+++ b/pages/culture.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Our Culture
-permalink: /about/culture/
+permalink: /company/culture/
+redirect_from: /culture/
 ---
 
 {% include hero_banner.html
