--- a/pages/join.html
+++ b/pages/join.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Careers
-permalink: /careers/
+title: Join Us
+permalink: /careers/join/
 redirect_from: /join/
 hero_content: Help us change the way government works.
 ---
@@ -28,7 +28,7 @@ hero_content: Help us change the way government works.
       </div>
     </div>
 
-    <section class="col-12 col-md-9 page--careers__text">
+    <section class="col-12 col-md-9 page--join__text">
       <div class="text" id="join">
         <h2 class="mt-0" id="why-skylight">Why Skylight?</h2>
         <h3>Our mission matters</h3>
@@ -37,8 +37,8 @@ hero_content: Help us change the way government works.
           government serves families, patients, veterans, immigrants, and many others
           in today's digital world. Everything about us &mdash; our structure,
           <a href="/about/culture/">culture</a>, <a href="/work/services/">services</a>,
-          <a href="/work/experience/">work</a>, <a href="/blog/">thoughts</a>,
-          and <a href="/company/about/#meet-the-team">team</a> &mdash; is designed with that purpose in mind.
+          <a href="/work/experience/">work</a>, <a href="/thoughts/blog/">thoughts</a>,
+          and <a href="/company/about/">team</a> &mdash; is designed with that purpose in mind.
         </p>
 
         <h3>You matter</h3>
@@ -110,7 +110,7 @@ hero_content: Help us change the way government works.
 
         <div class="text-grid row section__care-package">
           <div class="col-12 col-lg-4">
-            {% include icons/careers/compensation.svg %}
+            {% include icons/join/compensation.svg %}
             <h3>Compensation</h3>
             <p>
               We offer a competitive salary, a stake in the company's success, performance bonuses,
@@ -121,7 +121,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/future.svg %}
+            {% include icons/join/future.svg %}
             <h3>Future</h3>
             <p>
               We match your 401(k) dollar-for-dollar up to 10% of your salary. We also offer a
@@ -131,7 +131,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/health.svg %}
+            {% include icons/join/health.svg %}
             <h3>Health</h3>
             <p>
               We cover 90% of your medical premium, 100% of premiums for vision and dental,
@@ -142,7 +142,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/parental-leave.svg %}
+            {% include icons/join/parental-leave.svg %}
             <h3>Parental leave</h3>
             <p>
               We offer a minimum of 9 weeks paid time off for all eligible new birth,
@@ -151,7 +151,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/time-off.svg %}
+            {% include icons/join/time-off.svg %}
             <h3>Time off</h3>
             <p>
               We offer a minimum of 29 days paid time off, which covers any type of leave
@@ -161,7 +161,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/flexibility.svg %}
+            {% include icons/join/flexibility.svg %}
             <h3>Flexibility</h3>
             <p>
               We trust you. We give you maximum flexibility to decide when, where, and how to get your
@@ -171,7 +171,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/tools.svg %}
+            {% include icons/join/tools.svg %}
             <h3>Tools</h3>
             <p>
               We provide an annual tech budget of up to $750 for anything, such as a new computer,
@@ -181,7 +181,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/code-of-conduct.svg %}
+            {% include icons/join/code-of-conduct.svg %}
             <h3>Code of conduct</h3>
             <p>
               Everyone deserves a safe, inclusive environment. We live by our
@@ -191,7 +191,7 @@ hero_content: Help us change the way government works.
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/careers/community.svg %}
+            {% include icons/join/community.svg %}
             <h3>Community</h3>
             <p>
               We give you pathways to engage with a growing community of organizations and individuals
