--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,7 @@ skip_index: true
 
 {% capture header_content %}
   <p>We received your submission, and will be in touch shortly.
-  In the meantime, feel free to check out <a href="/blog/">our blog</a>,
+  In the meantime, feel free to check out <a href="/thoughts/blog/">our blog</a>,
   or follow us on <a href="{{site.twitter_url}}">Twitter</a> or
   <a href="{{site.linkedin_url}}">LinkedIn</a>.</p>
 {% endcapture %}
