--- a/pages/about.html
+++ b/pages/about.html
@@ -113,16 +113,15 @@ redirect_from: /about/
           <p>
             If you have a question for us, or would just like to get in touch, drop us a message
             at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-            If you'd like to inquire about hiring us for a job, <a href="/contact/">fill out this short form</a>.
-            If you're interested in joining our team, <a href="/careers/">check out our career opportunities</a>.
+            If you'd like to inquire about hiring us for a job, <a href="/connect/contact/">fill out this short form</a>.
+            If you're interested in joining our team, <a href="/careers/join/">check out our career opportunities</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
-            <a href="/contact/">let's talk business</a>.
+            <a href="/connect/contact/">let's talk business</a>.
           </p>
 
           <p>
             We love to share our thoughts on technology, design, procurement, business, culture,
-            and more with the world. You can <a href="/blog/">read up on the our latest thinking at our
-            company blog</a>.
+            and more with the world. You can <a href="/thoughts/blog/">read up on our latest thinking at our company blog</a>.
           </p>
 
           <p>
