--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contact Us
-permalink: /contact/
+permalink: /connect/contact/
 redirect_from:
   - /hire-us/
   - /alliances/
