--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 50
 display: true
-tags: [digital procurement, chris cairns, robert read]
+tags: [procurement, chris cairns, robert read]
 excerpt: A comprehensive framework for helping government program teams align acquisition practices with agile delivery practices.
 project_members:
   - chris-cairns
