--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 60
 display: true
-tags: [digital procurement, chris cairns, robert read]
+tags: [procurement, chris cairns, robert read]
 excerpt: A group of pre-vetted vendors who helped government agencies use agile practices to build digital services.
 project_members:
   - chris-cairns
