--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -12,7 +12,7 @@ feature_image:
 feature_image_description:
 order: 10
 display: true
-tags: [digital services delivery, sean johnson]
+tags: [service delivery, sean johnson]
 excerpt: An asynchronous communication solution for remote teams struggling to maintain focus on what matters most.
 project_members:
   - sean-johnson
