--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 170
 display: true
-tags: [digital procurement, microconsulting, api microconsulting, kin lane]
+tags: [procurement, microconsulting, apis, kin lane]
 excerpt: Sharing expertise of APIs to improve a critical solicitation for the next generation of Recreation.gov.
 project_members:
   - kin-lane
