--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 100
 display: true
-tags: [digital services delivery, microconsulting, robert read, chris cairns]
+tags: [service delivery, microconsulting, robert read, chris cairns]
 excerpt: Contributing to the turnaround of a troubled system modernization program at the Social Security Administration through agile micro-sprints.
 project_members:
   - robert-read
