--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -12,7 +12,7 @@ feature_image_description:
 feature_image_shadow:
 order: 30
 display: true
-tags: [digital services delivery, sean johnson]
+tags: [service delivery, sean johnson]
 excerpt: A messaging service that let consumers text any business, and receive an immediate response.
 project_members:
   - sean-johnson
