--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 75
 display: true
-tags: [microconsulting, api microconsulting, kin lane, chris cairns]
+tags: [microconsulting, apis, kin lane, chris cairns]
 excerpt: Giving the Veterans Affairs insight into current best practices for governing APIs across the enterprise.
 project_members:
   - kin-lane
