--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 85
 display: true
-tags: [microconsulting, api microconsulting, kin lane, chris cairns, robert read]
+tags: [microconsulting, apis, kin lane, chris cairns, robert read]
 excerpt: Giving the Veterans Affairs insight into which of their vast collection of public datasets would be most valuable to the veteran community in the form of APIs.
 project_members:
   - kin-lane
