--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 5
 display: true
-tags: [digital services delivery, becca bartola, lesley evans, tom black, aera hoffman]
+tags: [service delivery, becca bartola, lesley evans, tom black, aera hoffman]
 excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to veterans through the dissemination of promising clinical and administrative practices.
 project_members:
   - becca-bartola
