--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -37,20 +37,22 @@ permalink: /connect/contracting/
   <li>Service Design</li>
   <li>User Research</li>
   <li>User Experience Design</li>
-  <li>Content Strategy & Design</li>
+  <li>Content Strategy</li>
   <li>Accessibility</li>
-  <li>Agile Software Development</li>
+  <li>Agile Methods</li>
+  <li>Software Development</li>
   <li>Legacy Modernization</li>
+  <li>Microservices & Evolutionary Architecture</li>
   <li>DevOps</li>
-  <li>Open Source Software</li>
   <li>Cloud & Platform Engineering</li>
   <li>Open Data & APIs</li>
-  <li>Data Science & Engineering</li>
+  <li>Data & Analytics</li>
   <li>Artificial Intelligence & Machine Learning</li>
+  <li>Open Source</li>
   <li>Security & Privacy</li>
   <li>Internet of Things</li>
   <li>Product Management</li>
-  <li>Program Delivery</li>
+  <li>Delivery Management</li>
   <li>Digital Procurement</li>
   <li>Digital Transformation</li>
   <li>Digital Talent Management</li>
