--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 140
 display: true
-tags: [digital transformation, chris cairns, robert read]
+tags: [transformation, chris cairns, robert read]
 excerpt: A specialized team of digital experts within 18F focused on helping government agencies digitally transform.
 project_members:
   - chris-cairns
