--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 130
 display: true
-tags: [digital transformation, chris cairns, shashank khandelwal]
+tags: [transformation, chris cairns, shashank khandelwal]
 excerpt: A comprehensive framework designed to help government agencies transform into digitally-powered organizations.
 project_members:
   - chris-cairns
