--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 70
 display: true
-tags: [digital transformation, chris cairns, shashank khandelwal]
+tags: [transformation, chris cairns, shashank khandelwal]
 excerpt: Accelerating the Transportation Security Administration's transition to a cloud-based operating model.
 project_members:
   - chris-cairns
