--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -33,7 +33,7 @@ permalink: /work/toolkits/
     </p>
 
     <ul>
-      <li><b>Engagement Management</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+      <li><b>Delivery Management</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
       <li><b>Research & Design</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
       <li><b>Product</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
       <li><b>Engineering</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
