toolkit page edit

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -22,7 +22,7 @@ permalink: /work/toolkits/
       <li>Digital Talent Management Handbook. A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</li>
       <li>Data Sharing Playbook. A guide for state & local agencies on how to improve cross-organizational data sharing.</li>
       <li>Accessibility Guide. Tools and practices making products and services accessible to everyone.</li>
-      <li>Agile Procurement Playbook. A guide on how to the principles of agile to procurement.</li>
+      <li>Agile Procurement Playbook. A guide on how to apply the principles of agile to procurement.</li>
     </ul>
 
     <p>
