--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,9 @@ redirect_from: /about/
           {% for emp in employees %}
             <div id="{{emp.name}}" class="employee-col">
               <div class="employee-card">
-                <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
+                <div class="employee-gradient">
+                  <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
+                </div>
                 <div class="employee-block">
                   <h3 class="employee-title">{{emp.full_name}}</h3>
                   <h4 class="employee-subtitle">{{emp.position}}</h4>
