--- a/pages/blog.html
+++ b/pages/blog.html
@@ -49,7 +49,7 @@ pagination:
             </div>
             <div class="blog-post-footer">
               <a href="{{item.permalink}}" tabindex="0">
-                <span>Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
+                <span class="align-middle">Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -65,7 +65,7 @@ pagination:
     <div class="">
     {% if paginator.previous_page %}
       <a class="" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
-        <i class="fa fa-chevron-left mr-2"></i><b>Previous</b>
+        <i class="fa fa-chevron-left mr-2 pagination-icon"></i><b>Previous</b>
       </a>
     {% endif %}
     </div>
@@ -75,7 +75,7 @@ pagination:
     <div class="">
     {% if paginator.next_page %}
       <a class="" href="{{ paginator.next_page_path | prepend: site.baseurl }}">
-        <b>Next</b><i class="fa fa-chevron-right ml-2"></i>
+        <b>Next</b><i class="fa fa-chevron-right ml-2 pagination-icon"></i>
       </a>
     {% endif %}
     </div>
